feat: add post /price-drop-check route
